--- a/MiniPythonParser.cabal
+++ b/MiniPythonParser.cabal
@@ -34,6 +34,7 @@ library
   build-depends:
       HaTeX
     , base >=4.7 && <5
+    , hspec
     , megaparsec
   default-language: Haskell2010
 
@@ -48,6 +49,7 @@ executable MiniPythonParser-exe
       HaTeX
     , MiniPythonParser
     , base >=4.7 && <5
+    , hspec
     , megaparsec
   default-language: Haskell2010
 
@@ -63,5 +65,6 @@ test-suite MiniPythonParser-test
       HaTeX
     , MiniPythonParser
     , base >=4.7 && <5
+    , hspec
     , megaparsec
   default-language: Haskell2010
