--- a/MiniPythonParser.cabal
+++ b/MiniPythonParser.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -29,12 +29,16 @@ library
       Paths_MiniPythonParser
   hs-source-dirs:
       src
+  default-extensions:
+      QuasiQuotes
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       HaTeX
     , base >=4.7 && <5
+    , directory
     , hspec
     , megaparsec
+    , string-interpolate
   default-language: Haskell2010
 
 executable MiniPythonParser-exe
@@ -43,13 +47,17 @@ executable MiniPythonParser-exe
       Paths_MiniPythonParser
   hs-source-dirs:
       app
+  default-extensions:
+      QuasiQuotes
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HaTeX
     , MiniPythonParser
     , base >=4.7 && <5
+    , directory
     , hspec
     , megaparsec
+    , string-interpolate
   default-language: Haskell2010
 
 test-suite MiniPythonParser-test
@@ -59,11 +67,15 @@ test-suite MiniPythonParser-test
       Paths_MiniPythonParser
   hs-source-dirs:
       test
+  default-extensions:
+      QuasiQuotes
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HaTeX
     , MiniPythonParser
     , base >=4.7 && <5
+    , directory
     , hspec
     , megaparsec
+    , string-interpolate
   default-language: Haskell2010
